--- a/索引.md
+++ b/索引.md
@@ -1,12 +1,9 @@
 # FrontEnd-knowledge
  前端知识库, 整理各种知识
- ## 代码日常
- [[TypeScript 编码规范]]
- ## 数据结构与算法
- [[JavaScript 中的数据结构]]
- [[LeetCode 记录]]
- ## Vue 相关
- ## react 相关
- ## 网络相关
- ## 浏览器相关
+ ## 日常记录
+ - [[Code Review 摘要事项]]
+ - [[TypeScript 编码规范]]
+ - [[CommonJs 是如何导致打包体积增大_摘要]]
  
+ ## 面试
+ - [[100道面试题]]
