--- a/浏览器缓存.md
+++ b/浏览器缓存.md
@@ -1,10 +1,11 @@
+[[HTTP缓存]]
 缓存是性能优化中非常重要的一环，浏览器的缓存机制对开发也是非常重要的知识点。接下来以三个部分来把浏览器的缓存机制说清楚：
 
--   强缓存
+-   强制缓存
 -   协商缓存
 -   缓存位置
 
-### 强缓存
+### 强制缓存
 
 浏览器中的缓存作用分为两种情况，一种是需要发送`HTTP`请求，一种是不需要发送。
 
@@ -42,15 +43,13 @@ Cache-Control:max-age=3600
 
 如果你觉得它只有`max-age`一个属性的话，那就大错特错了。
 
-它其实可以组合非常多的指令，完成更多场景的缓存判断, 将一些关键的属性列举如下: **public**: 客户端和代理服务器都可以缓存。因为一个请求可能要经过不同的`代理服务器`最后才到达目标服务器，那么结果就是不仅仅浏览器可以缓存数据，中间的任何代理节点都可以进行缓存。
+它其实可以组合非常多的指令，完成更多场景的缓存判断, 将一些关键的属性列举如下: 
 
-**private**： 这种情况就是只有浏览器能缓存了，中间的代理服务器不能缓存。
-
-**no-cache**: 跳过当前的强缓存，发送HTTP请求，即直接进入`协商缓存阶段`。
-
-**no-store**：非常粗暴，不进行任何形式的缓存。
-
-**s-maxage**：这和`max-age`长得比较像，但是区别在于s-maxage是针对代理服务器的缓存时间。
+- **public**: 客户端和代理服务器都可以缓存。因为一个请求可能要经过不同的`代理服务器`最后才到达目标服务器，那么结果就是不仅仅浏览器可以缓存数据，中间的任何代理节点都可以进行缓存。
+- **private**： 这种情况就是只有浏览器能缓存了，中间的代理服务器不能缓存。
+- **no-cache**: 跳过当前的强缓存，发送HTTP请求，即直接进入`协商缓存阶段`。
+- **no-store**：非常粗暴，不进行任何形式的缓存。
+- **s-maxage**：这和`max-age`长得比较像，但是区别在于s-maxage是针对代理服务器的缓存时间。
 
 值得注意的是，当**Expires**和**Cache-Control**同时存在的时候，**Cache-Control**会优先考虑。
 
@@ -74,8 +73,8 @@ Cache-Control:max-age=3600
 -   否则返回304，告诉浏览器直接用缓存。
 
 #### ETag
-
-`ETag` 是服务器根据当前文件的内容，给文件生成的唯一标识，只要里面的内容有改动，这个值就会变。服务器通过`响应头`把这个值给浏览器。
+`ETag` 是服务器根据当前文件的内容，给文件生成生成一段 hash 字符串, 标识资源的状态，只要里面的内容有改动，这个值就会变。
+服务器通过`响应头`把这个值传给浏览器, 验证当前资源是否已经修改
 
 浏览器接收到`ETag`的值，会在下次请求时，将这个值作为**If-None-Match**这个字段的内容，并放到请求头中，然后发给服务器。
 
@@ -83,6 +82,7 @@ Cache-Control:max-age=3600
 
 -   如果两者不一样，说明要更新了。返回新的资源，跟常规的HTTP请求响应的流程一样。
 -   否则返回304，告诉浏览器直接用缓存。
+-   [[HTTP缓存#HTTP缓存流程]]
 
 #### 两者对比
 
