--- a/浏览器缓存.md
+++ b/浏览器缓存.md
@@ -30,9 +30,7 @@ Expires: Wed, 22 Nov 2019 08:41:00 GMT
 
 #### Cache-Control
 
-在HTTP1.1中，采用了一个非常关键的字段：`Cache-Control`。这个字段也是存在于
-
-它和`Expires`本质的不同在于它并没有采用`具体的过期时间点`这个方式，而是采用过期时长来控制缓存，对应的字段是**max-age**。比如这个例子:
+在HTTP1.1中，采用了一个非常关键的字段：`Cache-Control`。这个字段也是存在于它和`Expires`本质的不同在于它并没有采用`具体的过期时间点`这个方式，而是采用过期时长来控制缓存，对应的字段是**max-age**。比如这个例子:
 
 ```js
 Cache-Control:max-age=3600
