update a lot of things

--- a/回流与重绘.md
+++ b/回流与重绘.md
@@ -1,5 +1,24 @@
-一些常用且会导致回流的属性和方法：
 
+
+https://juejin.cn/post/6844903569087266823
+### 前提:浏览器的布局与渲染方式
+1. 浏览器使用流式布局模型(Flow Based Layout)
+2. 浏览器会将 HTML 解析成 DOM, 把 CSS 解析成 CSSOM, DOM 和CSSOM 的结合就形成了 Render Tree
+3. Render Tree 包含了所有节点的样式信息, 浏览器会计算节点在页面上的大小和位置, 最终绘制到浏览器视图窗口
+4. 由于浏览器使用流式布局, 对 Render Tree 的计算通常只需要遍历一次即可完成, 但是 `table` 及其内部元素除外, 因为这些标签因为数据变化的缘故需要多次计算, 通常需要花 3 倍于同级元素的时间, 这也是为什么需要避免使用 `table` 布局的原因
+## 回流必将引起重绘, 重绘不一定会引起回流
+### 回流 (Reflow)
+当Render Tree 中部分或全部元素的尺寸, 结构, 或某些属性发生改变时, 浏览器重新渲染页面的过程称为回流.
+**导致回流的操作有以下情况**:
+- 页面首次渲染
+- 浏览器窗口大小发生改变
+- 元素尺寸或位置发生改变
+- 元素内容变化(文字长度, 图片大小等)
+- 元素字体大小发生变化 
+- 添加或删除**可见**的 DOM 
+- 激活 CSS 伪类 (`:hover`)
+- 查询某些属性或调用某些方法
+**一些常用且会导致回流的属性和方法**：
 -   `clientWidth`、`clientHeight`、`clientTop`、`clientLeft`
 -   `offsetWidth`、`offsetHeight`、`offsetTop`、`offsetLeft`
 -   `scrollWidth`、`scrollHeight`、`scrollTop`、`scrollLeft`
@@ -7,5 +26,30 @@
 -   `getComputedStyle()`
 -   `getBoundingClientRect()`
 -   `scrollTo()`
-
-https://juejin.cn/post/6844903569087266823
+### 重绘 (Repaint)
+当页面中元素样式的改变不会影响到该元素在文档流中的位置时, 例如: `color`, `background-color`, `visibility` 等, 浏览器会将新的CSS属性赋给元素并重新绘制, 这个过程被称为重绘
+### 性能影响
+由上可知, **回流的性能开销比重绘要大**
+即使仅仅回流单个元素, 它的父元素以及任何跟随它的元素也会产生回流. 浏览器会对频繁的回流或重绘进行优化:
+**浏览器会维护一个队列, 把所有引起回流和重绘的操作放入队列中, 如果队列中的任务数量或者时间间隔达到一个阈值, 浏览器就会将队列进行清空, 进行批量处理, 这样可以把多次回流和重绘的操作合成一个动作完成**
+访问以下属性或者方法, 浏览器就会立即清空这个队列(也就是重新渲染):
+-   `clientWidth`、`clientHeight`、`clientTop`、`clientLeft`
+-   `offsetWidth`、`offsetHeight`、`offsetTop`、`offsetLeft`
+-   `scrollWidth`、`scrollHeight`、`scrollTop`、`scrollLeft`
+-   `width`、`height`
+-   `getComputedStyle()`
+-   `getBoundingClientRect()`
+因为队列中可能会有影响到上述属性或者方法返回值的操作, 即使希望获取的信息与队列中操作引发的改变无关, 浏览器也会强行清空队列, 确保我们能达到的值是最精确的
+### 如何避免浏览器回流与重绘
+#### CSS
+- 避免使用 `table` 布局
+- 尽可能在 DOM 树的最末端改变 class
+- 避免设置多层内联样式
+- 将动画效果应用到 `position` 属性为 `absolute` 或 `fixed` 的元素上
+- 避免使用 CSS 表达式, 如: `calc()`
+#### JavaScript
+- 避免频繁操作样式, 最好一次性重写 `style`, 或者将样式列表定义为 class 类并一次性更改 class
+- 避免频繁操作 DOM, 创建[[documentFragment]], 在它上面应用所有DOM操作, 最后再将其添加到文档中, (引申: [[requestAnimationFrame]])
+- 可以先将元素设置为 `display: none`, 操作结束后再重新显示, 因为在 `display: none` 的元素进行DOM操作不会引起回流和重绘
+- 避免频繁读取会引发回流重绘的属性, 如果确实需要, 使用变量存储这些属性值
+- 对具有复杂动画的元素使用绝对定位, 使其脱离文档流, 否则会引起父元素以及后续元素的频繁回流
