--- a/浏览器.md
+++ b/浏览器.md
@@ -1,7 +1,8 @@
-## 执行
--[[V8引擎]]
--[[GC机制]]
--[[内存管理]]
--[[chrome性能观察]]
--[[浏览器渲染]]
--[[跨域]]
+
+- [[V8引擎]]
+- [[GC机制]]
+- [[内存管理]]
+- [[浏览器存储]]
+- [[chrome性能观察]]
+- [[浏览器渲染]]
+- [[跨域]]
