--- a/浏览器缓存.md
+++ b/浏览器缓存.md
@@ -71,6 +71,7 @@ Cache-Control:max-age=3600
 -   否则返回304，告诉浏览器直接用缓存。
 
 #### ETag
+[[Etag]]
 `ETag` 是服务器根据当前文件的内容，给文件生成生成一段 hash 字符串, 标识资源的状态，只要里面的内容有改动，这个值就会变。
 服务器通过`响应头`把这个值传给浏览器, 验证当前资源是否已经修改
 
@@ -85,18 +86,14 @@ Cache-Control:max-age=3600
 #### 两者对比
 
 1.  在`精准度`上，`ETag`优于`Last-Modified`。优于 ETag 是按照内容给资源上标识，因此能准确感知资源的变化。而 Last-Modified 就不一样了，它在一些特殊的情况并不能准确感知资源变化，主要有两种情况:
-
 -   编辑了资源文件，但是文件内容并没有更改，这样也会造成缓存失效。
 -   Last-Modified 能够感知的单位时间是秒，如果文件在 1 秒内改变了多次，那么这时候的 Last-Modified 并没有体现出修改了。
 
 2.  在性能上，`Last-Modified`优于`ETag`，也很简单理解，`Last-Modified`仅仅只是记录一个时间点，而 `Etag`需要根据文件的具体内容生成哈希值。
-
-另外，如果两种方式都支持的话，服务器会优先考虑`ETag`。
+**如果不是强制刷新，而且请求头带上了if-modified-since和if-none-match两个字段，则先判断etag，再判断last-modified**
 
 ### 缓存位置
-
 前面我们已经提到，当`强缓存`命中或者协商缓存中服务器返回304的时候，我们直接从缓存中获取资源。那这些资源究竟缓存在什么位置呢？
-
 浏览器中的缓存位置一共有四种，按优先级从高到低排列分别是：
 
 -   Service Worker
@@ -130,4 +127,5 @@ Service Worker 同时也是 PWA 的重要实现机制，关于它的细节和特
 -   否则进入协商缓存，即发送 HTTP 请求，服务器通过请求头中的`If-Modified-Since`或者`If-None-Match`字段检查资源是否更新
     -   若资源更新，返回资源和200状态码
     -   否则，返回304，告诉浏览器直接从缓存获取资源
+    -   [[30x状态码]]
 
