add new section&audit some docs

--- a/面经.md
+++ b/面经.md
@@ -1,21 +1,29 @@
 面经一览
 ## JavaScript
--[[JavaScript]]
+- [[JavaScript]]
+## TypeScript
+- [[TypeScript]]
+## Node
+- [[NodeJS]]
 ## 前端框架
--[[Vue]]
--[[React]]
+- [[Vue]]
+- [[React]]
 - [[小程序]]
 ## CSS
--[[CSS]]
+- [[CSS]]
 ## 前端工程化
--[[前端工程化知识点]]
+- [[webpack]]
+- [[前端工程化]]
 ## 浏览器相关
--[[浏览器]]
+- [[浏览器]]
 ## 网络相关
--[[网络与缓存]]
+- [[网络与缓存]]
 ## 项目工程
--[[总结项目知识点]]
+- [[总结项目知识点]]
 ## 数据结构与算法
--[[LeetCode 记录]]
+- [[LeetCode 记录]]
 ## 面试手写题
-- [[常见手写题]]
+- [[笔试题]]
+## 其它
+- [[Nginx]]
+- [[JSBridge]]
