--- a/V8引擎.md
+++ b/V8引擎.md
@@ -1,3 +1,4 @@
+#browser
 ## V8 引擎的组成部分
 - 一个基本的编译器(basecomplier), 在代码运行之前, 编译器会分析JavaScript代码并且生成本地的机器码, 而不是通过字节码的方式来运行, 也不是简单的解释它. 这种机器码起初是没有被高度优化过的.
 - V8 通过对象模型(objectModel) 来表达对象. 对象在 JavaScript 中是以关联数组的方式呈现的, 但是在V8引擎中, 它们是通过隐藏类(hiddenModel)的方式来表示的. 这是一种可以优化查找的内部类型机制(internalTypeSystem)
