--- a/浏览器存储.md
+++ b/浏览器存储.md
@@ -1,3 +1,4 @@
+#browser
 ![[storage表格.png]]
 ## Cookie
 cookie的本职工作不是为了存储, 而是为了维持某种状态. 因为HTTP 是无状态的, HTTP协议自身不对请求和响应之间的通信状态进行保存, 也就是服务器不知道客户端做了什么什么操作. 这种情况限制了两端交互的信息量.
