--- a/跨域.md
+++ b/跨域.md
@@ -1,3 +1,4 @@
+#browser
 ## 同源策略
 **同源策略**是一个重要的安全策略，它用于限制一个[origin](https://developer.mozilla.org/zh-CN/docs/Glossary/Origin)的文档或者它加载的脚本如何能与另一个源的资源进行交互。它能帮助阻隔恶意文档，减少可能被攻击的媒介。
 
