update browser rendering

--- a/浏览器.md
+++ b/浏览器.md
@@ -4,6 +4,8 @@
 - [[内存管理]]
 - [[浏览器存储]]
 - [[chrome性能观察]]
+- [[浏览器进程线程]]
 - [[浏览器渲染]]
 - [[跨域]]
 - [[webComponents]]
+- [浏览器工作原理与实践](https://blog.poetries.top/browser-working-principle/guide/part5/lesson21.html#chrome-%E5%BC%80%E5%8F%91%E8%80%85%E5%B7%A5%E5%85%B7)
