--- a/浏览器渲染流程.md
+++ b/浏览器渲染流程.md
@@ -1,1 +1,11 @@
+#browser 
 https://juejin.cn/post/6844904194801926157#heading-29
+![[浏览器渲染流程.png]]
+**浏览器一个完整的渲染流程大致总结如下:**
+- 渲染进程将HTML内容转换成 DOM tree
+- 渲染引擎将CSS样式表转化为浏览器可理解的 styleSheet , 计算DOM节点的样式, 构建CSSOM 样式树
+- 创建布局树, 计算元素的布局信息
+- 对每个图层生成绘制列表, 并将其提交到合成线程
+- 合成线程将图层分成图块, 并在光栅化线程池中将图块转换成位图
+- 合成线程发送绘制图块命令 DrawQuad 给浏览器进程
+- 浏览器进程根据 DrawQuad 消息生成页面, 并显示到显示器
