about cache and LRU Algorithm

--- a/跨域.md
+++ b/跨域.md
@@ -72,7 +72,7 @@ JSONP 的原理就是利用 `<script>` 标签的 src 属性没有跨域的限制
 
 ### 服务器代理
 - 本地开发环境使用 webpack-dev-server 开启本地代理
-- nginx 反向代理(?) [[Nginx]]
+- nginx 反向代理(?)
 
 ### document.domain
 此方法适用于在二级域名相同的情况下, 例如`a.test.com` 和 `b.test.com`
