add new section

--- a/面经.md
+++ b/面经.md
@@ -9,11 +9,14 @@
 - [[Vue]]
 - [[React]]
 - [[小程序]]
+- [[RxJS]]
 ## CSS
 - [[CSS]]
 ## 前端工程化
 - [[webpack]]
 - [[前端工程化]]
+- [[rollup]]
+- [[Vite]]
 ## 浏览器相关
 - [[浏览器]]
 ## 网络相关
