--- a/回流与重绘.md
+++ b/回流与重绘.md
@@ -6,6 +6,12 @@ https://juejin.cn/post/6844903569087266823
 2. 浏览器会将 HTML 解析成 DOM, 把 CSS 解析成 CSSOM, DOM 和CSSOM 的结合就形成了 Render Tree
 3. Render Tree 包含了所有节点的样式信息, 浏览器会计算节点在页面上的大小和位置, 最终绘制到浏览器视图窗口
 4. 由于浏览器使用流式布局, 对 Render Tree 的计算通常只需要遍历一次即可完成, 但是 `table` 及其内部元素除外, 因为这些标签因为数据变化的缘故需要多次计算, 通常需要花 3 倍于同级元素的时间, 这也是为什么需要避免使用 `table` 布局的原因
+## 回流重绘流程
+浏览器渲染大致分为四个阶段，其中在解析 HTML 后，会依次进入 Layout 和 Paint 阶段。**样式或节点的更改，以及对布局信息的访问等**，都有可能导致重排和重绘。而重排和重绘的过程在**主线程**中进行，这意味着不合理的重排重绘会导致**渲染卡顿，用户交互滞后**等性能问题。
+1.  Parse HTML：相关引擎分别解析文档和样式表以及脚本，生成 DOM 和 CSSOM ，最终合成为 Render 树。
+2.  Layout：浏览器通过 Render 树中的信息，以递归的形式计算出每个节点的尺寸大小和在页面中的具体位置。
+3.  Paint：浏览器将 Render 树中的节点转换成在屏幕上绘制实际像素的指令，这个过程发生在多个图层上。
+4.  Composite：浏览器将所有层按照一定顺序合并为一个图层并绘制在屏幕上。
 ## 回流必将引起重绘, 重绘不一定会引起回流
 ### 回流 (Reflow)
 当Render Tree 中部分或全部元素的尺寸, 结构, 或某些属性发生改变时, 浏览器重新渲染页面的过程称为回流.
@@ -41,13 +47,24 @@ https://juejin.cn/post/6844903569087266823
 -   `getBoundingClientRect()`
 因为队列中可能会有影响到上述属性或者方法返回值的操作, 即使希望获取的信息与队列中操作引发的改变无关, 浏览器也会强行清空队列, 确保我们能达到的值是最精确的
 ### 如何避免浏览器回流与重绘
-#### CSS
+大多数显示器的刷新率是 60FPS（frames per second）。理想情况下，浏览器需要在 1/60 秒内完成渲染阶段并交付一帧。这样用户就会看到一个交互流畅的页面。
+
+在交互阶段，页面更新（一般是通过执行 JavaScript 来触发）通常会触发重排和重绘。为了提升浏览器渲染效率，应当尽可能减少重绘重排（跳过 Layout/Paint 步骤），从而降低浏览器渲染耗费的时间，将内容尽快渲染到屏幕上。
+
+#### 解决方案
+1.  对 DOM 进行批量写入和读取（通过虚拟 DOM 或者 DocumentFragment 实现）。
+2.  避免对样式频繁操作，了解常用样式属性触发 Layout / Paint / Composite 的[机制](https://csstriggers.com/)，合理使用样式。
+3.  合理利用特殊样式属性（如 transform: translateZ(0) 或者 will-change），将渲染层提升为合成层，开启 GPU 加速，提高页面性能。
+4.  按需缓存布局信息，避免频繁读取。
+
+另外，可以借助 DevTools Performance 面板来查看产生重排重绘任务占用主线程的情况和调用代码。
+##### CSS
 - 避免使用 `table` 布局
 - 尽可能在 DOM 树的最末端改变 class
 - 避免设置多层内联样式
 - 将动画效果应用到 `position` 属性为 `absolute` 或 `fixed` 的元素上
 - 避免使用 CSS 表达式, 如: `calc()`
-#### JavaScript
+##### JavaScript
 - 避免频繁操作样式, 最好一次性重写 `style`, 或者将样式列表定义为 class 类并一次性更改 class
 - 避免频繁操作 DOM, 创建[[documentFragment]], 在它上面应用所有DOM操作, 最后再将其添加到文档中, (引申: [[requestAnimationFrame]])
 - 可以先将元素设置为 `display: none`, 操作结束后再重新显示, 因为在 `display: none` 的元素进行DOM操作不会引起回流和重绘
