--- a/浏览器进程线程.md
+++ b/浏览器进程线程.md
@@ -11,8 +11,15 @@
 ### 多进程浏览器(以chrome为代表)
 现代浏览器一般采用多进程架构, 以chrome为例, 在浏览器中主要有以下几个进程:
 1.  **浏览器主进程** : 主要负责界面显示, 用户交互, 子进程管理, 提供用户存储等功能
-2.  **渲染进程** : 页面显示的关键进程, 主要将HTML, CSS, javaScript 转化为页面, 使用排版引擎和JS V8引擎处理该类工作, 默认情况下, chrome的一个tab就是一个渲染进程. 渲染进程运行在沙箱模式下
-3.  GPU进程 : 最初为了实现 3D CSS, 后来UI页面也使用GPU进行渲染, 所以有了这个进程
+2.  **渲染进程(GPU进程)** : 页面显示的关键进程, 主要将HTML, CSS, javaScript 转化为页面, 使用排版引擎和JS V8引擎处理该类工作, 默认情况下, chrome的一个tab就是一个渲染进程. 渲染进程运行在沙箱模式下. 该进程下又包含了以下几种重要的线程
+	1.  **GUI渲染线程**
+	2.  **JS引擎线程** 有V8引擎
+	3.  **事件触发线程** 与 EventLoop 密切相关
+	4.  **定时触发器线程**
+	5.  **异步HTTP请求线程**
+	> **GUI渲染线程**与**JS引擎线程**是互斥的, 为了方式DOM渲染的不一致性, 其中一个线程执行期间另一个线程会被挂起, 这里两个线程也涉及到 Vue 中的 [[nextTick]]
+	> [[JS引擎线程和事件触发线程]]
+3.  GPU进程 : 最初为了实现 3D CSS, 后来UI页面也使用GPU进行渲染, 所以有了这个进程, 其实同上
 4.  **网络进程** : 主要负责网络资源加载, 也就是network面板里面看到的所有服务端资源请求都是由该进程负责
 5.  插件进程 : 负责插件运行, 插件有奔溃的风险, 所以单独拎出来为一个进程做隔离, 保证页面和浏览器不会受插件出问题而影响
 
