--- a/笔试题.md
+++ b/笔试题.md
@@ -5,3 +5,4 @@ https://github.com/Mayandev/fe-interview-handwrite/blob/master/README.md
 - [[控制前端最大并发量]]
 - [[手写JSONP]]
 - [[LRU缓存策略]]
+- [[URL解析参数]]
