--- a/浏览器渲染流程.md
+++ b/浏览器渲染流程.md
@@ -9,3 +9,14 @@ https://juejin.cn/post/6844904194801926157#heading-29
 - 合成线程将图层分成图块, 并在光栅化线程池中将图块转换成位图
 - 合成线程发送绘制图块命令 DrawQuad 给浏览器进程
 - 浏览器进程根据 DrawQuad 消息生成页面, 并显示到显示器
+- 
+**另一个版本**
+当浏览器进程获取到 HTML 的第一个字节开始，会通知渲染进程开始解析 HTML，将 HTML 转换成 DOM 树，并进入渲染流程。一般所有的浏览器都会经过五大步骤，分别是：
+
+1.  PARSE：解析 HTML，构建 DOM 树。
+2.  STYLE：为每个节点计算最终的有效样式。
+3.  LAYOUT：为每个节点计算位置和大小等布局信息。
+4.  PAINT：绘制不同的盒子，为了避免不必要的重绘，将会分成多个层进行处理。
+5.  COMPOSITE & RENDER：将上述不同的层合成为一张位图，发送给 GPU，渲染到屏幕上。
+
+为了提高浏览器的渲染性能，通常的手段是保证渲染流程不被阻塞，避免不必要的绘制计算和[[回流与重绘]]，利用 GPU 硬件加速等技术来提高渲染性能。
