编程题若干&&补齐

--- a/编程题.md
+++ b/编程题.md
@@ -1,4 +1,4 @@
-#手写JS
+#编程题
 https://github.com/Mayandev/fe-interview-handwrite/blob/master/README.md
 - [[函数柯里化]]
 - [[防抖&节流]]
@@ -6,3 +6,5 @@ https://github.com/Mayandev/fe-interview-handwrite/blob/master/README.md
 - [[手写JSONP]]
 - [[LRU缓存策略]]
 - [[URL解析参数]]
+- [[数组去重]]
+- [[数组扁平化]]
