--- a/防抖&节流.md
+++ b/防抖&节流.md
@@ -1,4 +1,4 @@
-#手写JS
+#编程题 
 ## 防抖
 `debounce` : 不管事件触发频率多块, 一定保证在事件触发`n`秒之后才执行. 如果在一个事件触发的`n`秒内又触发了该事件, 就以新触发动作的时间为准, `n` 秒后才执行.  总之, 触发完事件`n`秒内不再触发事件, `n`秒后再执行.
 ### 实现
