修改相关文章

--- a/小程序技术原理.md
+++ b/小程序技术原理.md
@@ -1,4 +1,5 @@
 # 小程序技术原理
+[[小程序]]
 
 ## 双线程模型
 
@@ -133,4 +134,8 @@
 6. 加载页面代码和注册页面
 7. 等待页面 Ready 和 Page 实例化
 
-## [文章参考](https://zhaomenghuan.js.org/blog/wechat-miniprogram-principle-analysis.html#%E5%8F%82%E8%80%83)
+## 文章参考
+- https://zhaomenghuan.js.org/blog/wechat-miniprogram-principle-analysis.html#%E5%8F%82%E8%80%83)
+- https://zhuanlan.zhihu.com/p/81775922
+- https://juejin.cn/post/6844903966342381581
+- https://zhuanlan.zhihu.com/p/352122031
