--- a/浏览器.md
+++ b/浏览器.md
@@ -6,8 +6,10 @@
 - [[浏览器缓存]]
 - [[chrome性能观察]]
 - [[浏览器进程线程]]
-- [[EventLoop]]
+- [[EventLoop事件循环]]
 - [[浏览器渲染]]
+- [[回流与重绘]]
 - [[跨域]]
 - [[webComponents]]
 - [浏览器工作原理与实践](https://blog.poetries.top/browser-working-principle/guide/part5/lesson21.html#chrome-%E5%BC%80%E5%8F%91%E8%80%85%E5%B7%A5%E5%85%B7)
+- [[Ajax]]
