--- a/浏览器缓存.md
+++ b/浏览器缓存.md
@@ -1,5 +1,5 @@
 #Network #browser 
-[[HTTP缓存]]
+[[HTTP缓存机制]]
 [[HTTP协议#浏览器链接限制]]
 缓存是性能优化中非常重要的一环，浏览器的缓存机制对开发也是非常重要的知识点。接下来以三个部分来把浏览器的缓存机制说清楚：
 
@@ -83,7 +83,7 @@ Cache-Control:max-age=3600
 
 -   如果两者不一样，说明要更新了。返回新的资源，跟常规的HTTP请求响应的流程一样。
 -   否则返回304，告诉浏览器直接用缓存。
--   [[HTTP缓存#HTTP缓存流程]]
+-   [[HTTP缓存机制#HTTP缓存流程]]
 
 #### 两者对比
 
