--- a/编程题.md
+++ b/编程题.md
@@ -9,3 +9,5 @@ https://github.com/Mayandev/fe-interview-handwrite/blob/master/README.md
 - [[数组去重]]
 - [[数组扁平化]]
 - [[实现深拷贝]]
+- [[发布订阅模式]]
+- [[lazyMan 函数]]
