--- a/浏览器渲染过程.md
+++ b/浏览器渲染过程.md
@@ -1,5 +1,5 @@
 #browser 
-https://juejin.cn/post/6844904194801926157#heading-29
+# 浏览器渲染过程
 ![[浏览器渲染流程.png]]
 **浏览器一个完整的渲染流程大致总结如下:**
 - 渲染进程将HTML内容转换成 DOM tree
@@ -22,3 +22,6 @@ https://juejin.cn/post/6844904194801926157#heading-29
 5.  COMPOSITE & RENDER：将上述不同的层合成为一张位图，发送给 GPU，渲染到屏幕上。
 
 为了提高浏览器的渲染性能，通常的手段是保证渲染流程不被阻塞，避免不必要的绘制计算和[[回流与重绘]]，利用 GPU 硬件加速等技术来提高渲染性能。
+
+[从输入URL到渲染全过程](https://juejin.cn/post/6844904194801926157#heading-29)
+
