--- a/浏览器组成部分.md
+++ b/浏览器组成部分.md
@@ -38,3 +38,5 @@
 	-   **渲染进程**准备好之后, 浏览器向渲染进程发起"提交文档"的消息, 渲染进程接收到消息后和网络进程建立传输数据的"管道"
 	-   **渲染进程** 接收完数据后, 向浏览器进程发送"确认提交"
 	-   **浏览器进程**接收到确认消息后更新浏览器界面状态, 有以下: 安全, 地址栏URL, 页面栈历史状态, 更新web页面
+	-   
+[浏览器工作原理与实践](https://blog.poetries.top/browser-working-principle/)
