--- a/浏览器.md
+++ b/浏览器.md
@@ -13,3 +13,4 @@
 - [[webComponents]]
 - [浏览器工作原理与实践](https://blog.poetries.top/browser-working-principle/guide/part5/lesson21.html#chrome-%E5%BC%80%E5%8F%91%E8%80%85%E5%B7%A5%E5%85%B7)
 - [[Ajax]]
+- [[preload&prefetch]]
