--- a/多图站点性能优化.md
+++ b/多图站点性能优化.md
@@ -57,9 +57,18 @@ date updated: 2021-12-17 11:57
 
 由于实际应用场景的差异，对应图片的布局大小以及图片细节要求各有不同，大量未经压缩或缩放调整的图片会使网页加载许多不必要的字节，且对用户的视觉效果没有太大的提升。前端常见的压缩和缩放的处理方案包括：
 
-- 静态资源通过工具（比如 imagemin）按需进行有损或无损压缩。
+- 静态资源通过工具（比如 `imagemin`）按需进行有损或无损压缩。
 - 将用户上传的图片绘制到 Canvas 画布上，利用 `CanvasRenderingContext2D.drawImage(image, dx, dy, dWidth, dHeight)` API 进行图片缩放；利用 `HTMLCanvasElement.toDataURL(type, encoderOptions)` API 进行有损压缩。
 - 根据用户侧的显示需求（如头像、缩略图、商品图等），通过对象存储服务（如七牛、阿里云 OSS）所提供的压缩或缩放等功能处理后返回使用。
+- 使用 `imagemin-mozjpeg` 库实现渐进式 JPG 图片, 可以使图片从低分辨率逐步加载到高分辨率, 这对网络环境较差或者需要快速显示其它文本内容的场景下很适用
+- 使用 WebP 图像格式: 这是谷歌新引入的图像格式, 它的目标是通过无损和有损格式编码图像来提供更小的文件大小, 从而达到替代 JPG\PNG 的方案. 我们可以使用 HTML 提供的 `<picture>` 标签兼容 WebP 图像
+
+```html
+<picture>
+  <source srcset='sample.webp' type='image/webp'>
+  <img src='sample.jpg' alt='' >
+</picture>
+```
 
 ### 2. 网络传输优化
 
