--- a/浏览器事件.md
+++ b/浏览器事件.md
@@ -1,9 +1,31 @@
 #browser 
 ## 事件机制
 
-## 冒泡和捕获
+JavaScript 和 HTML 的交互是通过**事件**实现的, 代表文档或浏览器窗口中发生特定交互的瞬间行为. 目前所有的现代浏览器都实现了 `DOM2 Events` 的核心部分, IE8 是最后一个使用专有事件系统的主流浏览器.
 
-## 事件委托
+### DOM 事件处理程序三种方式
+- DOM0: **对每个事件只支持一个事件处理程序**, 如: `onClick`  `onType`
+- DOM2:  `el.addEventListener(eventName, handler, options)` 注册事件, `el.removeEventListener()` 移除事件, `el.dispatchEvent()` 派发事件, **DOM2级事件可以添加多个事件处理程序**
+> DOM0 的`handler` 会在所属元素的作用域内运行, IE 的 `handler` 会在全局作用域运行,  this指向window.
+> 当添加多个时间是, DOM2会按照添加顺序执行时间程序, IE会以相反的顺序执行
+- DOM3:  在DOM2 基础上重新定义而事件, 并增加了新的时间类型, 如滚动事件, 焦点事件, 鼠标事件, 滚轮事件, 键盘事件, 而且允许开发者自定义事件
+
+## 事件流
+DOM2 级规定的事件流包括三个阶段
+- 事件捕获阶段
+- 处于目标阶段
+- 事件冒泡阶段
+![[browser-事件流程.png]]
+### 冒泡和捕获
+1. 当处于目标阶段, 没有捕获与冒泡之分, 执行顺序会按照 `addEventListener` 的添加顺序决定, 先添加先执行
+2. 使用 `stopPropagation()` 取消事件传播时, 事件不会被传播给下一个节点, 但是, 同一节点上的其它listener不会受影响, 继续执行. 
+>如果想要同一节点的也不执行, 需要使用 `stopImmediatePropagation()`
+3. `preventDefault()` 只是阻止默认行为, 跟 JS 的事件传播没有关系
+4. 一旦发起了 `preventDefault()` , 在之后传递下去的事件里面也会有效果
+
+
+## 事件委托/事件代理
+
 
 ## 浏览器默认行为
 
