--- a/浏览器事件.md
+++ b/浏览器事件.md
@@ -26,7 +26,56 @@ DOM2 级规定的事件流包括三个阶段
 
 ## 事件委托/事件代理
 
+事件委托就是利用事件冒泡, 只指定一个事件处理程序, 就可以管理某一类型的所有事件.
+
+### 为什么需要有事件委托/事件代理?
+
+假设一种情况: 在一个长列表中每一个子项都有相同 click 点击事件, 在每个元素上绑定一个点击事件的话会很大影响页面的运行性能. 具体来说就是访问 DOM 的次数越多, 导致页面重绘与重拍的次数也就也多, 这样会延长整个页面的交互运行时间. 如此一来我们使用事件委托, 把所有的点击操作放在同一个JS程序中, 只需要与页面交互一次, 减少 DOM 交互次数, 提高性能. **适合使用事件委托的事件: click, mousedown, mouseup, keydown, keyup, keypress**
 
 ## 浏览器默认行为
 
+许多事件会触发浏览器执行某些行为:
+
+- 点击一个 `<a>` 标签触发导航到某URL
+- 点击表单的提交按钮, 触发提交与服务器交互
+- 在文本上按下鼠标并移动, 选中了某段文本
+
+我们如果需要用 JS 处理一个事件且不希望浏览器发生默认的行为, 就需要阻止浏览器行为.
+
+通常有两种方式:
+
+- 主流使用 `event` 对象, 它有 `event.preventDefault()` 方法阻止默认行为
+- 如果使用的是 `element.on<event>` 方法, 那么直接返回 `false` 也同样有效
+
+```js
+// 兼容各种浏览器的阻止默认事件代码
+element.onclick = function(event) {
+  event = event || window.event 
+
+  if (event.preventDefault) {  // W3C variant 
+    event.preventDefault()
+  } else { // IE<9 variant:
+    event.returnValue = false
+  }
+}
+```
+
 ## 创建自定义事件
+
+处于页面交互的需要, 可能需要自己创建全新的事件行为. 我们可以使用内建的 `Event` 对象, 构造一个新的事件.
+
+```js
+let customEvent = new Event(type[, options]);
+```
+
+- **type**: 事件类型名称, string
+- **options**: 具有两个可选参数对象:
+  - `bubbles: true/false`: 如果true, 事件会冒泡
+  - `cancelable" true/false`:  如果为true, 那么"默认行为"会被阻止.
+  - 默认两者都是false
+
+创建完自定义事件之后, 需要使用 `element.diapatchEvent(event)` 来触发该行为.
+
+除了 `Event` 对象之外, 还有 `CustomEvent` 对象可供使用, 后者与前者的区别在于第二个参数多了一个 `detail` 属性, 可附带更多信息.
+
+### 事件中的事件是同步的
