--- a/杨辉三角.md
+++ b/杨辉三角.md
@@ -36,7 +36,7 @@ var generate = (numRows) => {
     // 声明每行形式
     const row = new Array(i + 1). fill(1); // fill填充每一行第一个数为 1
     // 循环 row 构造行数组
-    for(let j = 0; j < row.length - 1; i++) {
+    for(let j = 1; j < row.length - 1; j++) {
       // 关键计算, 第 j 个数 = row[i - 1]行的[j - 1] 的值 + 第 row[i - 1]行的 [j] 的值
       row[j] = ret[i - 1][j - 1] + ret[i - 1][j]
     }
