小补充小修改

--- a/前端工程化.md
+++ b/前端工程化.md
@@ -12,5 +12,6 @@ date updated: 2021-12-17 14:54
 ## [[自动化]]
 
 ## [[babel]]
+babel 三大编译步骤: **解析 parser**, **转换 transformer**, **生成 generator**
 
 ## [[Web性能优化]]
