--- a/浏览器.md
+++ b/浏览器.md
@@ -12,27 +12,55 @@ date updated: 2021-12-17 16:51
 ## [[内存管理]]
 
 ## [[浏览器事件]]
-
+JavaScript 和 HTML 的交互是通过**事件**实现的, 代表文档或浏览器窗口中发生特定交互的瞬间行为. 目前所有的现代浏览器都实现了 `DOM2 Events` 的核心部分, IE8 是最后一个使用专有事件系统的主流浏览器.
 ## [[浏览器存储]]
 
-## [[浏览器缓存]]
+## [[HTTP 缓存]]
+浏览器缓存也是HTTP是性能优化中非常重要的一环，浏览器的缓存机制对开发也是非常重要的知识点。接下来以三个部分来把浏览器的缓存机制说清楚：
+- 强制缓存
+- 协商缓存
+- 缓存位置
+[[缓存运用与最佳实践#浏览器的缓存策略]]
+当一个用户发起一个静态资源请求的时候，浏览器会通过以下几步来获取资源：
+
+1. **本地缓存阶段**：先在本地查找该资源，如果有发现该资源，而且该资源还没有过期，就使用这一个资源，完全不会发送 http 请求到服务器；
+2. **协商缓存阶段**：如果在本地缓存找到对应的资源，但是不知道该资源是否过期或者已经过期，则发一个 http 请求到服务器,然后服务器判断这个请求，如果请求的资源在服务器上没有改动过，则返回 304，让浏览器使用本地找到的那个资源；[[Etag]]
+3. **缓存失败阶段**：当服务器发现请求的资源已经修改过，或者这是一个新的请求(在本来没有找到资源)，服务器则返回该资源的数据，并且返回 200， 当然这个是指找到资源的情况下，如果服务器上没有这个资源，则返回 404。
+
 
 ## [[chrome 性能观察]]
 
 ## [[浏览器构成]]
+现代浏览器一般采用多进程架构, 以 chrome 为例, 在浏览器中主要有以下几个进程:
 
+1. **浏览器主进程** : 主要负责界面显示, 用户交互, 子进程管理, 提供用户存储等功能
+2. **渲染进程(GPU 进程)** : 页面显示的关键进程, 主要将 HTML, CSS, javaScript 转化为页面, 使用排版引擎和 JS V8 引擎处理该类工作, 默认情况下, chrome 的一个 tab 就是一个渲染进程. 渲染进程运行在沙箱模式下. 该进程下又包含了以下几种重要的线程
+   1. **GUI 渲染线程**
+   2. **JS 引擎线程** 有 V8 引擎
+   3. **事件触发线程** 与 EventLoop 密切相关
+   4. **定时触发器线程**
+   5. **异步 HTTP 请求线程**
 ## [[EventLoop 事件循环]]
-
+浏览器需要事件循环来协调事件、用户操作、脚本执行、渲染、网络请求等。通过事件循环，浏览器可以利用**任务队列**来管理任务，让异步事件**非阻塞**地执行。每个客户端对应的事件循环是相对独立的。
 ## [[浏览器渲染]]
+**浏览器一个完整的渲染流程大致总结如下:**
 
+- 渲染进程将 HTML 内容转换成 DOM tree
+- 渲染引擎将 CSS 样式表转化为浏览器可理解的 styleSheet , 计算 DOM 节点的样式, 构建 CSSOM 样式树
+- 创建布局树, 计算元素的布局信息
+- 对每个图层生成绘制列表, 并将其提交到合成线程
+- 合成线程将图层分成图块, 并在光栅化线程池中将图块转换成位图
+- 合成线程发送绘制图块命令 DrawQuad 给浏览器进程
+- 浏览器进程根据 DrawQuad 消息生成页面, 并显示到显示器
 ## [[回流与重绘]]
 
 ## [[跨域]]
-
+**同源的定义**
+如果两个 URL 的 [protocol](https://developer.mozilla.org/zh-CN/docs/Glossary/Protocol) 、[port (en-US)](https://developer.mozilla.org/en-US/docs/Glossary/Port "Currently only available in English (US)") (如果有指定的话)和 [host](https://developer.mozilla.org/zh-CN/docs/Glossary/Host) 都相同的话，则这两个 URL 是**同源**。这个方案也被称为“协议/主机/端口元组”，或者直接是 “元组”。（“元组” 是指一组项目构成的整体，双重/三重/四重/五重/等的通用形式）。
 ## [[webComponents]]
 
 ## [[Ajax]]
-
+AJAX是异步的JavaScript和XML（**A**synchronous **J**avaScript **A**nd **X**ML）。简单点说，就是使用 [XMLHttpRequest](https://developer.mozilla.org/en-US/DOM/XMLHttpRequest) 对象与服务器通信。 它可以使用JSON，XML，HTML和text文本等格式发送和接收数据。AJAX最吸引人的就是它的“异步”特性，也就是说它可以在不重新刷新页面的情况下与服务器通信，交换数据，或更新页面。
 ## [[preload&prefetch]]
 
 ## [浏览器工作原理与实践](https://blog.poetries.top/browser-working-principle/guide/part5/lesson21.html#chrome-%E5%BC%80%E5%8F%91%E8%80%85%E5%B7%A5%E5%85%B7)
