--- a/浏览器.md
+++ b/浏览器.md
@@ -8,8 +8,9 @@ date updated: 2021-12-17 16:51
 ## [[V8 引擎]]
 
 ## [[GC 机制]]
-
-## [[内存管理]]
+垃圾回收是一种内存管理机制. V8 中的垃圾回收器会尝试去分配已经不需要的对象所占据的内存控件. 比如在 JavaScript 拥有垃圾回收机制的语言中, 如果程序中仍然存在指向一个对象的引用, 那么该对象将不会被回收.
+在大多数情况下, 我们没有必要去手动解除对象的引用(de-referencing). 只要简单地把变量放在它们该在的地方, GC 就可以正确的回收掉这些代码释放内存控件
+注释: 在理想的情况下, 变量应该尽量为局部变量, 也就是说在它们被使用的函数中去声明它们.
 
 ## [[浏览器事件]]
 JavaScript 和 HTML 的交互是通过**事件**实现的, 代表文档或浏览器窗口中发生特定交互的瞬间行为. 目前所有的现代浏览器都实现了 `DOM2 Events` 的核心部分, IE8 是最后一个使用专有事件系统的主流浏览器.
@@ -64,3 +65,25 @@ AJAX是异步的JavaScript和XML（**A**synchronous **J**avaScript **A**nd **X**
 ## [[preload&prefetch]]
 
 ## [浏览器工作原理与实践](https://blog.poetries.top/browser-working-principle/guide/part5/lesson21.html#chrome-%E5%BC%80%E5%8F%91%E8%80%85%E5%B7%A5%E5%85%B7)
+
+## 总结：从输入URL到页面展示，这中间发生了什么
+
+-   用户输入url并回车
+-   浏览器进程检查url，组装协议，构成完整的url
+-   浏览器进程通过进程间通信（IPC）把url请求发送给网络进程
+-   网络进程接收到url请求后检查本地缓存是否缓存了该请求资源，如果有则将该资源返回给浏览器进程
+-   **如果没有，网络进程向web服务器发起http请求（网络请求），请求流程如下**：
+    -   进行DNS解析，获取服务器ip地址，端口（端口是通过dns解析获取的吗？这里有个疑问）
+    -   利用ip地址和服务器建立tcp连接
+    -   构建请求头信息
+    -   发送请求头信息
+    -   服务器响应后，网络进程接收响应头和响应信息，并解析响应内容
+-   **网络进程解析响应流程**；
+    -   检查状态码，如果是301/302，则需要重定向，从Location自动中读取地址，重新进行第4步 （301/302跳转也会读取本地缓存吗？这里有个疑问），如果是200，则继续处理请求。
+    -   200响应处理：检查响应类型Content-Type，如果是字节流类型，则将该请求提交给下载管理器，该导航流程结束，不再进行后续的渲染，如果是html则通知浏览器进程准备渲染进程准备进行渲染。
+-   **准备渲染进程**
+    -   浏览器进程检查当前url是否和之前打开的渲染进程根域名是否相同，如果相同，则复用原来的进程，如果不同，则开启新的渲染进程
+-   **传输数据、更新状态**
+    -   渲染进程准备好后，浏览器向渲染进程发起“提交文档”的消息，渲染进程接收到消息和网络进程建立传输数据的“管道”
+    -   渲染进程接收完数据后，向浏览器发送“确认提交”
+    -   浏览器进程接收到确认消息后更新浏览器界面状态：安全、地址栏url、前进后退的历史状态、更新web页面
