更新今日查漏补缺

--- a/浏览器总览.md
+++ b/浏览器总览.md
@@ -53,9 +53,9 @@ JavaScript 和 HTML 的交互是通过**事件**实现的, 代表文档或浏览
 - 合成线程将图层分成图块, 并在光栅化线程池中将图块转换成位图
 - 合成线程发送绘制图块命令 DrawQuad 给浏览器进程
 - 浏览器进程根据 DrawQuad 消息生成页面, 并显示到显示器
-## [[回流与重绘]]
+## [[浏览器回流与重绘]]
 
-## [[跨域]]
+## [[浏览器跨域]]
 **同源的定义**
 如果两个 URL 的 [protocol](https://developer.mozilla.org/zh-CN/docs/Glossary/Protocol) 、[port (en-US)](https://developer.mozilla.org/en-US/docs/Glossary/Port "Currently only available in English (US)") (如果有指定的话)和 [host](https://developer.mozilla.org/zh-CN/docs/Glossary/Host) 都相同的话，则这两个 URL 是**同源**。这个方案也被称为“协议/主机/端口元组”，或者直接是 “元组”。（“元组” 是指一组项目构成的整体，双重/三重/四重/五重/等的通用形式）。
 ## [[webComponents]]
