--- a/浏览器渲染过程.md
+++ b/浏览器渲染过程.md
@@ -26,6 +26,6 @@ date created: 2021-12-09 22:58
 4. PAINT：绘制不同的盒子，为了避免不必要的重绘，将会分成多个层进行处理。
 5. COMPOSITE & RENDER：将上述不同的层合成为一张位图，发送给 GPU，渲染到屏幕上。
 
-为了提高浏览器的渲染性能，通常的手段是保证渲染流程不被阻塞，避免不必要的绘制计算和[[回流与重绘]]，利用 GPU 硬件加速等技术来提高渲染性能。
+为了提高浏览器的渲染性能，通常的手段是保证渲染流程不被阻塞，避免不必要的绘制计算和[[浏览器回流与重绘]]，利用 GPU 硬件加速等技术来提高渲染性能。
 
 [从输入 URL 到渲染全过程](https://juejin.cn/post/6844904194801926157#heading-29)
