--- a/总结项目知识点.md
+++ b/总结项目知识点.md
@@ -6,3 +6,17 @@ date updated: 2021-12-17 16:00
 ## [[多图站点性能优化]]
 
 ## [[首页白屏优化]]
+
+## SSO 单点登录
+一处登录, 处处登录.
+主要有以下功能:
+1. 所有应用系统共享一个身份认证系统
+	- 统一在认证系统上将用户的登录信息和用户信息存储比较. 该系统提供用户登录认证, 认证成功后生成统一的认证标志(token)返回给用户端. 认证系统维护ticket 的时效性
+2. 所有应用系统能够识别和提取 token 信息
+	- 各个应用系统实现识别 token 信息, 提取, 通过与认证系统的通讯, 判断登录态和实现认证刷新机制
+### SSO 方案: 父域Cookie
+浏览器中的同源策略中, 不同域名是不能互相访问Cookie的. 但是Cookie 可以在 **父域中被子域名所共享, 子域名会自动继承父域名中的Cookie**
+
+- 将Token 保存在父域名中, 
+- 设置Cookie 的domain属性设置为父域名
+- Cookie 的 path 属性设置为根路径, 子域名的应用就可以都访问到该Cookie
