--- a/浏览器&DOM HTML/浏览器跨域.md
+++ b/浏览器&DOM HTML/浏览器跨域.md
@@ -92,7 +92,7 @@ User-Agent: Mozilla/5.0...
 ### JSONP
 
 JSONP 的原理就是利用 `<script>` 标签的 src 属性没有跨域的限制，通过指向一个需要访问的地址，由服务端返回一个预先定义好的 Javascript 函数的调用，并且将服务器数据以该函数参数的形式传递过来，此方法需要前后端配合完成。
-[[手写 JSONP]]
+[[JSONP-手写实现]]
 
 ### 服务器代理
 
