--- a/网络/网络与缓存.md
+++ b/网络/网络与缓存.md
@@ -10,7 +10,7 @@ date created: 2021-12-09 22:57
 - [[UDP 协议]]
 - [[HTTP 协议]]
 - [[HTTP3 协议]]
-- [[HTTPS]]
+- [[HTTPS 加密]]
 - [[HTTP 状态码]]
 - [[HTTP 请求方式]]
 
