--- a/浏览器&DOM HTML/浏览器渲染过程.md
+++ b/浏览器&DOM HTML/浏览器渲染过程.md
@@ -4,10 +4,10 @@ date created: 2021-12-09 22:58
 
 #browser
 
-# 浏览器渲染过程
+## 浏览器渲染过程
 
 ![[浏览器渲染流程.png]]
-**浏览器一个完整的渲染流程大致总结如下:**
+## 浏览器一个完整的渲染流程大致总结如下:
 
 - 渲染进程将 HTML 内容转换成 DOM tree
 - 渲染引擎将 CSS 样式表转化为浏览器可理解的 styleSheet , 计算 DOM 节点的样式, 构建 CSSOM 样式树
@@ -17,7 +17,7 @@ date created: 2021-12-09 22:58
 - 合成线程发送绘制图块命令 DrawQuad 给浏览器进程
 - 浏览器进程根据 DrawQuad 消息生成页面, 并显示到显示器
 
-**另一个版本**
+## 另一个版本
 当浏览器进程获取到 HTML 的第一个字节开始，会通知渲染进程开始解析 HTML，将 HTML 转换成 DOM 树，并进入渲染流程。一般所有的浏览器都会经过五大步骤，分别是：
 
 1. PARSE：解析 HTML，构建 DOM 树。
@@ -29,3 +29,5 @@ date created: 2021-12-09 22:58
 为了提高浏览器的渲染性能，通常的手段是保证渲染流程不被阻塞，避免不必要的绘制计算和[[浏览器回流与重绘]]，利用 GPU 硬件加速等技术来提高渲染性能。
 
 [从输入 URL 到渲染全过程](https://juejin.cn/post/6844904194801926157#heading-29)
+
+## 渲染阻塞
