--- a/项目总结/总结项目知识点.md
+++ b/项目总结/总结项目知识点.md
@@ -20,3 +20,6 @@ date updated: 2021-12-17 16:00
 - 将Token 保存在父域名中, 
 - 设置Cookie 的domain属性设置为父域名
 - Cookie 的 path 属性设置为根路径, 子域名的应用就可以都访问到该Cookie
+
+## 权限管理控制 
+[RBAC](https://juejin.cn/post/7092349891673849886)
