React diff & 其它更新

--- a/前端工程/前端工程.md
+++ b/前端工程/前端工程.md
@@ -5,11 +5,11 @@ date updated: 2021-12-17 14:54
 
 ## [[JS Module]]
 
-## [[组件化]]
+## [[2.组件化]]
 
-## [[规范化]]
+## [[3.规范化]]
 
-## [[自动化]]
+## [[4.自动化]]
 
 ## [[babel]]
 babel 三大编译步骤: **解析 parser**, **转换 transformer**, **生成 generator**
