--- a/浏览器&DOM HTML/浏览器事件.md
+++ b/浏览器&DOM HTML/浏览器事件.md
@@ -8,7 +8,7 @@ date created: 2022-05-26 13:32
 
 JavaScript 和 HTML 的交互是通过**事件**实现的, 代表文档或浏览器窗口中发生特定交互的瞬间行为. 目前所有的现代浏览器都实现了 `DOM2 Events` 的核心部分, IE8 是最后一个使用专有事件系统的主流浏览器.
 
-### DOM 事件处理程序三种方式
+### DOM 事件处理三级
 
 - **DOM0**: **对每个事件只支持一个事件处理程序**, 如: `onClick`  `onType`
 - **DOM2:**  `el.addEventListener(eventName, handler, options)` 注册事件, `el.removeEventListener()` 移除事件, `el.dispatchEvent()` 派发事件, **DOM2 级事件可以添加多个事件处理程序**
