--- a/浏览器&DOM HTML/浏览器回流与重绘.md
+++ b/浏览器&DOM HTML/浏览器回流与重绘.md
@@ -7,7 +7,7 @@ date updated: 2021-12-17 14:10
 
 <https://juejin.cn/post/6844903569087266823>
 
-### 前提:浏览器的布局与渲染方式
+## 前提:浏览器的布局与渲染方式
 
 1. 浏览器使用流式布局模型(Flow Based Layout)
 2. 浏览器会将 HTML 解析成 DOM, 把 CSS 解析成 CSSOM, DOM 和 CSSOM 的结合就形成了 Render Tree
@@ -27,7 +27,7 @@ date updated: 2021-12-17 14:10
 
 ### 回流 (Reflow)
 
-当 Render Tree 中部分或全部元素的尺寸, 结构, 或某些属性发生改变时, 浏览器重新渲染页面的过程称为回流.
+当 `Render Tree` 中部分或全部元素的尺寸, 结构, 或某些属性发生改变时, 浏览器重新渲染页面的过程称为回流.
 **导致回流的操作有以下情况**:
 
 - 页面首次渲染
@@ -35,7 +35,7 @@ date updated: 2021-12-17 14:10
 - 元素尺寸或位置发生改变
 - 元素内容变化(文字长度, 图片大小等)
 - 元素字体大小发生变化
-- 添加或删除**可见**的 DOM
+- **添加或删除可见的 DOM**
 - 激活 CSS 伪类 (`: hover`)
 - 查询某些属性或调用某些方法
 
@@ -69,22 +69,22 @@ date updated: 2021-12-17 14:10
 
 因为队列中可能会有影响到上述属性或者方法返回值的操作, 即使希望获取的信息与队列中操作引发的改变无关, 浏览器也会强行清空队列, 确保我们能达到的值是最精确的
 
-### 如何避免浏览器回流与重绘
+## 如何避免浏览器回流与重绘
 
 大多数显示器的刷新率是 60FPS（frames per second）。理想情况下，浏览器需要在 1/60 秒内完成渲染阶段并交付一帧。这样用户就会看到一个交互流畅的页面。
 
 在交互阶段，页面更新（一般是通过执行 JavaScript 来触发）通常会触发重排和重绘。为了提升浏览器渲染效率，应当尽可能减少重绘重排（跳过 Layout/Paint 步骤），从而降低浏览器渲染耗费的时间，将内容尽快渲染到屏幕上。
 
-#### 解决方案
+### 解决方案
 
 1. 对 DOM 进行批量写入和读取（通过虚拟 DOM 或者 DocumentFragment 实现）。
-2. 避免对样式频繁操作，了解常用样式属性触发 Layout / Paint / Composite 的 [机制](https://csstriggers.com/) ，合理使用样式。
+2. 避免对样式频繁操作，了解常用样式属性触发 `Layout` / `Paint` / `Composite` 的 [机制](https://csstriggers.com/) ，合理使用样式。
 3. 合理利用特殊样式属性（如 transform: translateZ(0) 或者 will-change），将渲染层提升为合成层，开启 GPU 加速，提高页面性能。
 4. 按需缓存布局信息，避免频繁读取。
 
 另外，可以借助 DevTools Performance 面板来查看产生重排重绘任务占用主线程的情况和调用代码。
 
-##### CSS
+#### CSS
 
 - 避免使用 `table` 布局
 - 尽可能在 DOM 树的最末端改变 class
@@ -92,7 +92,7 @@ date updated: 2021-12-17 14:10
 - 将动画效果应用到 `position` 属性为 `absolute` 或 `fixed` 的元素上
 - 避免使用 CSS 表达式, 如: `calc()`
 
-##### JavaScript
+#### JavaScript
 
 - 避免频繁操作样式, 最好一次性重写 `style`, 或者将样式列表定义为 class 类并一次性更改 class
 - 避免频繁操作 DOM, 创建[[documentFragment]], 在它上面应用所有 DOM 操作, 最后再将其添加到文档中, (引申: [[requestAnimationFrame]])
