--- a/浏览器&DOM HTML/浏览器构成.md
+++ b/浏览器&DOM HTML/浏览器构成.md
@@ -29,7 +29,7 @@ date updated: 2021-12-17 14:51
    4. **定时触发器线程**
    5. **异步 HTTP 请求线程**
 
-> **GUI 渲染线程**与**JS 引擎线程**是互斥的, 为了方式 DOM 渲染的不一致性, 其中一个线程执行期间另一个线程会被挂起, 这里两个线程也涉及到 Vue 中的 [[Vue $nextTick]]
+> **GUI 渲染线程**与**JS 引擎线程**是互斥的, 为了防止 DOM 渲染的不一致性, 其中一个线程执行期间另一个线程会被挂起, 这里两个线程也涉及到 Vue 中的 [[Vue $nextTick]]
 > [[JS 引擎线程和事件触发线程]]
 
 3. GPU 进程 : 最初为了实现 3D CSS, 后来 UI 页面也使用 GPU 进行渲染, 所以有了这个进程, 其实同上
