--- a/浏览器&DOM HTML/浏览器渲染过程.md
+++ b/浏览器&DOM HTML/浏览器渲染过程.md
@@ -31,3 +31,7 @@ date created: 2021-12-09 22:58
 [从输入 URL 到渲染全过程](https://juejin.cn/post/6844904194801926157#heading-29)
 
 ## 渲染阻塞
+
+**GUI 渲染线程**与**JS 引擎线程**是互斥的, 准确来说: 浏览器中的 `Paint` 任务是与 JS 执行都发生在浏览器的主线程中. 在 HTML 解析渲染页面的时候, 如果遇到 JS 执行过长, 主线程任务中 `Paint` 任务没有被即使执行. 它们两者都在争夺主浏览器线程的有限资源, , 不会进行整理绘制页面的信息, 构造出绘制列表. 
+[参考链接](https://juejin.cn/post/7088497880700305416)
+
